# openmusicapi

./: .gitignore  Cargo.toml  todo.md
migrations/2023-12-26-222316_artists/: up.sql
migrations/2023-12-27-104638_tracks/: up.sql
migrations/2023-12-27-233144_artist_tracks/: down.sql  up.sql
src/: main.rs  schema.rs
src/helpers/: db.rs
src/middlewares/: error.rs
src/models/: album.rs  artist.rs  mod.rs  spotify.rs  track.rs
src/routes/: search.rs  tracks.rs
src/utils/: README.md  mod.rs  project.rs  utils.rs
src/utils/tokens/: mod.rs  service.rs  spotify.rs  tidal.rs
