[package]
name = "openmusic-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
base64 = "0.21.5"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
async-trait = "0.1.75"
env_logger = "0.10.1"
serde_json = "1.0.108"
