[package]
name = "openmusic-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
env_logger = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
diesel = { version = "2", features = ["r2d2", "postgres", "chrono"] }
diesel_migrations = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.20"
